ingress/kubeapps/node-exporter/node-exporter-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: node-exporter
  namespace: monitor
spec:
#   tls:
#   - hosts:
#     - lope.test
#     secretName: lope-tls-secret
  rules:
  - host: node-exporter.lope.test
    http:
      paths:
      - path: /
        backend:
          serviceName: super-earth-node-exporter
          servicePort: 9100
